# AutoIntel

./: README.md  pyproject.toml  users.db
generated_report/effect_of_genai_on_developers_20251026_152717/: effect_of_genai_on_developers_20251026_152717.docx
generated_report/effect_of_genai_on_developers_20251026_152902/: effect_of_genai_on_developers_20251026_152902.docx
notebook/: test.ipynb
research_and_analyst/utils/: model_loader.py
