[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["research_and_analyst"]

[tool.setuptools.package-data]
"research_and_analyst" = ["api/templates/*", "config/*.yaml"]

[project]
name = "automated-research-report-generation-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.6.8",
    "langchain-community==0.3.30",
    "langchain-core==0.3.78",
    "tavily-python==0.7.12",
    "wikipedia==1.4.0",
    "langchain-openai==0.3.32",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "structlog==25.4.0",
    "ipykernel>=6.30.1",
    "python-docx==1.2.0",
    "reportlab==4.4.4",
    "fastapi==0.120.0",
    "uvicorn==0.38.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
    "aiofiles>=23.2.1",
    "sqlalchemy==2.0.43",
    "bcrypt==3.2.2",
    "passlib==1.7.4",
]
